# tech-news

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  UV.md  digest-daily.md  digest-monthly.md  digest-weekly.md  digest.md  pyproject.toml  pytest.ini  quality.py  roadmap.md  what-to-do-next.md
.claude/: settings-local.json  settings.local.json
.github/workflows/: ci.yml  claude.yml  daily-scrape-with-ai.yml  scrape-and-summarize.yml  scraper-schedule.yml  scraper-tests.yml
data/: devto-20250430-172114.md  devto-20250430-172303.md  devto-20250430-173316.md  devto-20250430-173823.md  devto-20250430-174533.md  devto-20250501-133017.md  github-20250430-172109.md  github-20250430-172257.md  github-20250430-173122.md  github-20250430-173311.md  github-20250430-173707.md  github-20250430-173818.md  github-20250430-174053.md  github-20250430-174200.md  github-20250430-174528.md  github-20250430-174731.md  github-20250430-174817.md  github-20250501-133012.md  hackernews-20250430-171019.md  hackernews-20250430-171317.md  hackernews-20250430-171842.md  hackernews-20250430-172305.md  hackernews-20250430-173319.md  hackernews-20250430-173715.md  hackernews-20250430-173826.md  hackernews-20250430-174101.md  hackernews-20250430-174209.md  hackernews-20250430-174536.md  hackernews-20250430-174740.md  hackernews-20250501-133020.md  hackernoon-20250430-171846.md  lobsters-20250430-171840.md  lobsters-20250430-172029.md  lobsters-20250430-172303.md  lobsters-20250430-173128.md  lobsters-20250430-173316.md  lobsters-20250430-173713.md  lobsters-20250430-173824.md  lobsters-20250430-174058.md  lobsters-20250430-174534.md  (+3 more)
data/2025-06-01/: github-20250601-234614.json  hackernews_api-20250601-234614.json  lobsters-20250601-234621.json
data/2025-06-02/: github-20250602-001702.json  github-20250602-010224.json  github-20250602-040223.json  github-20250602-070225.json  github-20250602-100236.json  hackernews_api-20250602-010231.json  hackernews_api-20250602-040230.json  hackernews_api-20250602-070232.json  hackernews_api-20250602-100243.json  lobsters-20250602-010226.json  lobsters-20250602-040225.json  lobsters-20250602-070227.json  lobsters-20250602-100238.json
data/2026-04-01/: digest.md  github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-02/: digest.md  github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-03/: digest.md  github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-04/: digest.md  github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-05/: digest.md  github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-06/: digest.md  github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-07/: github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-08/: github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-09/: github.json  hackernews_api.json  hnrss.json  newsfeed.json  tldr.json
data/2026-04-10/: digest.md  github.json  hackernews_api.json  (+3 more)
scraper/: __init__.py  constants.py  main.py
(+21352 files in other folders)
