[tool.poetry]
name = "tech-news"
version = "0.1.0"
description = "Market Intelligence Scraper for collecting trending content from tech websites"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pyyaml = "^6.0.1"
lxml = "^5.1.0"
selenium = "^4.18.1"
feedparser = "^6.0.11"
urllib3 = "^2.0.5"
webdriver-manager = "^4.0.2"
openai = "^1.79.0"
psutil = "^5.9.8"
click = "^8.2.1"
playwright = "^1.55.0"

[tool.poetry.scripts]
scraper = "scraper.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
autoflake = "^2.3.1"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
pytest-cov = "^6.1.1"
bandit = "^1.7.7"
mypy = "^1.8.0"
PyYAML = "^6.0.1"
pre-commit = "^3.6.0"
tomli = "^2.0.1"
types-requests = "^2.32.0.20250515"
types-pyyaml = "^6.0.12.20250516"
pytest-asyncio = "<1.0"
pytest-html = "^4.2.0"
pytest-playwright = "^0.7.2"
pytest-randomly = "^4.0.1"
pytest-sugar = "^1.1.1"
pytest-timeout = "^2.4.0"
pytest-watch = "^4.2.0"
pytest-xdist = "^3.8.0"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B311", "B404", "B607", "B603", "B110"]
targets = ["scraper"]

[tool.black]
line-length = 222
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '^/docs'

[tool.isort]
profile = "black"
line_length = 222
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["scraper", "scraper/tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
implicit_optional = true
strict_optional = false
allow_redefinition = true
disable_error_code = [
  "attr-defined",
  "arg-type",
  "assignment",
  "index",
  "return-value",
  "var-annotated",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=scraper",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=15",
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-m", "not integration"
]
testpaths = ["scraper/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async (for asyncio tests)"
]

[tool.coverage.run]
source = ["scraper"]
omit = [
    "scraper/tests/*",
    "scraper/scripts/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
